# omni-connect

./: README.md
firmware/arduino/: serial_v1.ino
flet_app/: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
flet_app/src/: main.py
flet_app/src/devices/: arduino.py
flet_app/src/routes/: about.py  error404.py  root.py
flet_app/src/utils/: config.py  elements.py
