[project]
name = "omni-connect"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Andrii Bogdanovych", email = "ab@foundation101.org" }
]

dependencies = [
    "flet==0.80.5",
    "flet-storage==1.0.0",
    "pyserial==3.5",
]

[dependency-groups]
dev = [
    "flet-cli==0.80.5",
    "flet-desktop-light==0.80.5",
    "flet-web==0.80.5",
    "pre_commit>=4.5.1",
    "black>=26.1.0",
    "isort>=7.0.0",
]

[tool.flet]
org = "org.foundation101"
product = "Omni Connect"
company = "NGO Foundation.101"
copyright = "Copyright (C) 2026 by NGO Foundation.101"

[tool.flet.app]
path = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"